2003-03-17  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (EnumResourceLanguages[AW]): Correct prototypes.
	(EnumResourceNames[AW]): Ditto.
	(EnumResourceTypes[AW]): Ditto.
	* include/wincon.h (CONSOLE_FONT_INFO): Add struct.

2003-03-16  Toby Malone  <malone@users.sourceforge.net>

	* include/winuser.h (SendInput): Add prototype.
	* lib/user32.def (SendInput): Add stub.

2003-03-16  Vadim Yegorov  <zg@bmg.lv>

	* winioctl.h (FSCTL_SET_REPARSE_POINT: Correct macro.
	(FSCTL_DELETE_REPARSE_POINT): Likewise.

2003-03-15  Bang Jun-Young  <junyoung@netbsd.org>

	* winnt.h (JOBOBJECTINFOCLASS): Define enum.
	(JOBOBJECT_*): Define corresponding structures.

2003-03-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/winddk.h (PCUNICODE_STRING): Remove incorrect
	typedef.

2003-03-13  Bang Jun-Young  <junyoung@netbsd.org>

	* lib/kernel32.def (Module32{First,Next}{,W}): Add missing exports.
	(Process32{First,Next}{,W}): Ditto.
	(Thread32{First,Next}): Ditto.
	* include/ntdef.h (PCUNICODE_STRING): Add typedef.

2003-03-12  Earnie Boyd  <earnie@users.sf.net>

	* include/mswsock.h: Correct invalid filter for _WINSOCK2_H.
	Thanks to Jim Barton <jmbarton@users.sf.net>.

2003-03-12  Ranjit Mathew  <rmathew@hotmail.com>

        * include/winnt.h (_IMAGE_SEPARATE_DEBUG_HEADER): Expose
        member SectionAlignment.

2003-03-11  Earnie Boyd  <earnie@users.sf.net>

	* include/winsvc.h (SERVICE_NO_CHANGE): Use hex constant to avoid
	warnings.
	Thanks to Fabricio D. Rossi <gurusoda@users.sf.net>.
	* Makefile.in (bindist): Correct process.
	* lib/Makefile.in (install): Ditto.
	Thanks to Jeff Bonnggren <jbon@users.sf.net>.

2003-03-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/rasdlg.h: New file.
	* lib/rasdlg.def: New file.
	* lib/test.c: Include rasdlg.h.

2003-03-06  Christopher January  <chris@atomice.net>

	* include/winbase.h (FindFirstVolume): Add declaration.
	(FindNextVolume): Add declaration.