@@ -26,7 +26,7 @@ extern "C" {
 #define UF_SCRIPT 1
 #define UF_ACCOUNTDISABLE 2
 #define UF_HOMEDIR_REQUIRED 8
-#define UF_LOCK 16
+#define UF_LOCKOUT 16
 #define UF_PASSWD_NOTREQD 32
 #define UF_PASSWD_CANT_CHANGE 64
 #define UF_TEMP_DUPLICATE_ACCOUNT 256
@@ -37,7 +37,7 @@ extern "C" {
 #define UF_MACHINE_ACCOUNT_MASK (UF_INTERDOMAIN_TRUST_ACCOUNT|UF_WORKSTATION_TRUST_ACCOUNT|UF_SERVER_TRUST_ACCOUNT)
 #define UF_ACCOUNT_TYPE_MASK (UF_TEMP_DUPLICATE_ACCOUNT|UF_NORMAL_ACCOUNT|UF_INTERDOMAIN_TRUST_ACCOUNT|UF_WORKSTATION_TRUST_ACCOUNT|UF_SERVER_TRUST_ACCOUNT)
 #define UF_DONT_EXPIRE_PASSWD 65536
-#define UF_SETTABLE_BITS (UF_SCRIPT|UF_ACCOUNTDISABLE|UF_LOCK|UF_HOMEDIR_REQUIRED|UF_PASSWD_NOTREQD|UF_PASSWD_CANT_CHANGE|UF_ACCOUNT_TYPE_MASK|UF_DONT_EXPIRE_PASSWD)
+#define UF_SETTABLE_BITS (UF_SCRIPT|UF_ACCOUNTDISABLE|UF_LOCKOUT|UF_HOMEDIR_REQUIRED|UF_PASSWD_NOTREQD|UF_PASSWD_CANT_CHANGE|UF_ACCOUNT_TYPE_MASK|UF_DONT_EXPIRE_PASSWD)
 #define FILTER_TEMP_DUPLICATE_ACCOUNT 1
 #define FILTER_NORMAL_ACCOUNT 2
 #define FILTER_INTERDOMAIN_TRUST_ACCOUNT 8
